--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "description": "Shopping cart VueJS",
   "author": "Nicky <sevendragonsno1@gmail.com>",
   "scripts": {
-    "build": "node build/build.js",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "build": "node build/build.js"
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuetify": "^1.4.1"
   },
@@ -24,14 +25,21 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "body-parser": "^1.18.3",
     "chalk": "^2.0.1",
+    "concurrently": "^4.1.0",
+    "connect-history-api-fallback": "^1.6.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "function-bind": "^1.1.1",
     "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.19.1",
     "node-notifier": "^5.1.2",
+    "opn": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
